# a.i.Can-demo

./: app.py  models.py  pyproject.toml  sqlite.db
data/: assistant-context.txt
data/user-data/: derek-health-info.txt  florence-health-info.txt  sarah-health-info.txt
modules/components/: assistant.py  execute_agent.py
modules/db/: conn.py  data.sql
modules/db/migrations/: initial_script.sql
